# pylabencoder

./: CLAUDE.md  adaptive_cascaded_kalman.py  angle_kalman_analysis.py  circular_innovation_kalman.py  circular_kalman_acceleration.py  circular_kalman_simple.py  cv_ca_cascade.py  cv_ca_large_q_comparison.py  cv_dense_sampling.py  cv_dense_visualization.py  cv_kalman_tuning.py  cv_only_large_q.py  cv_vs_ca_acceleration.py  ekf_sincos_vs_circular_kalman.py  kalman_acceleration_fixed.py  kalman_test.py  kalman_with_acceleration.py  linear_vs_circular_kalman.py  main.py  main_anal.py  main_anal_extended.py  modular_angle_kalman.py  position_velocity_kalman.py  pyproject.toml  robot_acceleration_profile.py  simple_acceleration_test.py  simple_kalman.py  simple_kalman_cv.py  single_kf_q100.py  test_angle_functions.py  visual.py
.claude/: settings.local.json
kalman/: ca.py  cj.py  cv.py  ema.py  fir.py  iir.py
motion/: motion.py
src/pytemplate/: __init__.py
src/pytemplate/core/: anal.py  ang.py  kalman.py
src/pytemplate/utils/: __init__.py  csv_reader.py  plot_helper.py
tests/: conftest.py
tests/unit/: test_base.py
